--- a/slave-server/package.json
+++ b/slave-server/package.json
@@ -2,13 +2,14 @@
   "name": "slave-server",
   "version": "1.0.0",
   "description": "",
-  "main": "slave-server.js",
+  "main": "slaveServer.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Jerico Alcaras",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.16.2",
     "plato": "^1.7.0"
   }
 }
