--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "master-server",
+  "name": "cyclo-master-server",
   "version": "1.0.0",
   "description": "",
   "main": "masterServer.js",
