--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -9,6 +9,7 @@
   "author": "Jerico Alcaras",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "nodegit": "^0.20.3"
   }
 }
