--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -9,7 +9,10 @@
   "author": "Jerico Alcaras",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.7",
     "express": "^4.16.2",
+    "form-data": "^2.3.1",
+    "md5-file": "^3.2.3",
     "nodegit": "^0.20.3",
     "rimraf": "^2.6.2"
   }
