--- a/cyclo-slave-server/package.json
+++ b/cyclo-slave-server/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.2",
+    "form-data": "^2.3.1",
+    "formidable": "^1.1.1",
     "multer": "^1.3.0",
     "plato": "^1.7.0"
   }
