--- a/cyclo-slave-server/package.json
+++ b/cyclo-slave-server/package.json
@@ -4,7 +4,10 @@
   "description": "",
   "main": "slaveServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm-run-all -p -c SLAVE-0 SLAVE-1 SLAVE-2",
+	"SLAVE-0": "node slaveServer.js 8081",
+	"SLAVE-1": "node slaveServer.js 8082",
+	"SLAVE-2": "node slaveServer.js 8083"
   },
   "author": "Jerico Alcaras",
   "license": "ISC",
@@ -14,5 +17,8 @@
     "formidable": "^1.1.1",
     "multer": "^1.3.0",
     "plato": "^1.7.0"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.2"
   }
 }
