--- a/cyclo-slave-server/package.json
+++ b/cyclo-slave-server/package.json
@@ -5,9 +5,9 @@
   "main": "slaveServer.js",
   "scripts": {
     "test": "npm-run-all -p -c SLAVE-0 SLAVE-1 SLAVE-2",
-	"SLAVE-0": "node slaveServer.js 8081",
-	"SLAVE-1": "node slaveServer.js 8082",
-	"SLAVE-2": "node slaveServer.js 8083"
+    "SLAVE-0": "node slaveServer.js 8081",
+    "SLAVE-1": "node slaveServer.js 8082",
+    "SLAVE-2": "node slaveServer.js 8083"
   },
   "author": "Jerico Alcaras",
   "license": "ISC",
@@ -15,6 +15,7 @@
     "express": "^4.16.2",
     "form-data": "^2.3.1",
     "formidable": "^1.1.1",
+    "md5-file": "^3.2.3",
     "multer": "^1.3.0",
     "plato": "^1.7.0"
   },
