--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -4,16 +4,18 @@
   "description": "",
   "main": "masterServer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node masterServer.js"
   },
   "author": "Jerico Alcaras",
   "license": "ISC",
   "dependencies": {
     "adm-zip": "^0.4.7",
+    "console-stamp": "^0.2.6",
     "express": "^4.16.2",
     "form-data": "^2.3.1",
     "md5-file": "^3.2.3",
     "nodegit": "^0.20.3",
+    "ping": "^0.2.2",
     "rimraf": "^2.6.2"
   }
 }
