--- a/cyclo-slave-server/package.json
+++ b/cyclo-slave-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "slaveServer.js",
   "scripts": {
-    "test": "npm-run-all -p -c SLAVE-0 SLAVE-1 SLAVE-2",
+    "test": "npm-run-all -p SLAVE-0 SLAVE-1 SLAVE-2",
     "SLAVE-0": "node slaveServer.js 8081",
     "SLAVE-1": "node slaveServer.js 8082",
     "SLAVE-2": "node slaveServer.js 8083"
@@ -12,12 +12,15 @@
   "author": "Jerico Alcaras",
   "license": "ISC",
   "dependencies": {
+    "adm-zip": "^0.4.7",
+    "console-stamp": "^0.2.6",
     "express": "^4.16.2",
     "form-data": "^2.3.1",
     "formidable": "^1.1.1",
     "md5-file": "^3.2.3",
     "multer": "^1.3.0",
-    "plato": "^1.7.0"
+    "plato": "^1.7.0",
+    "rimraf": "^2.6.2"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.2"
