--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -16,6 +16,7 @@
     "md5-file": "^3.2.3",
     "nodegit": "^0.20.3",
     "ping": "^0.2.2",
-    "rimraf": "^2.6.2"
+    "rimraf": "^2.6.2",
+    "timer-stopwatch": "^0.2.0"
   }
 }
