--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -13,6 +13,7 @@
     "console-stamp": "^0.2.6",
     "express": "^4.16.2",
     "form-data": "^2.3.1",
+    "jade": "^1.11.0",
     "md5-file": "^3.2.3",
     "nodegit": "^0.20.3",
     "ping": "^0.2.2",
