--- a/cyclo-slave-server/package.json
+++ b/cyclo-slave-server/package.json
@@ -5,6 +5,7 @@
   "main": "slaveServer.js",
   "scripts": {
     "test": "npm-run-all -p SLAVE-0 SLAVE-1 SLAVE-2",
+	"start": "node slaveServer.js 8080",
     "SLAVE-0": "node slaveServer.js 8081",
     "SLAVE-1": "node slaveServer.js 8082",
     "SLAVE-2": "node slaveServer.js 8083"
