Master NPM start script for Nebula deployment.

--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "masterServer.js",
   "scripts": {
-    "test": "node masterServer.js"
+    "test": "node masterServer.js",
+    "start": "node masterServer.js"
   },
   "author": "Jerico Alcaras",
   "license": "ISC",
