Client-side limiting and SHA-1 user hashing.

--- a/cyclo-master-server/package.json
+++ b/cyclo-master-server/package.json
@@ -20,6 +20,7 @@
     "nodegit": "^0.20.3",
     "ping": "^0.2.2",
     "rimraf": "^2.6.2",
+    "sha1": "^1.1.1",
     "timer-stopwatch": "^0.2.0"
   }
 }
